--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,8 @@
     <script>addToHomescreen({
        debug: true,
 	maxDisplayCount:0,
-       startDelay: 2
+        startDelay: 2,
+        lifespan:0
 	});    
     </script>
     
