--- a/www/pages/fragment/loginStatus.html
+++ b/www/pages/fragment/loginStatus.html
@@ -1,7 +1,7 @@
 <div class="modal row" ng-click="closeModal()" style="display: flex;align-items: center;">
-    <div class="col">
+    <div class="col" ng-click="dontSwitch($event)">
         <div class="row text-center">
-            <span class="col" style="color:white;">
+            <span class="col">
                 {{loginMsg}}
             </span>
         </div>
