--- a/www/pages/fragment/unknownColony.html
+++ b/www/pages/fragment/unknownColony.html
@@ -1,11 +1,11 @@
 <div class="list card">
     <div class="item item-body">
-        <img class="full-image" ng-src="img/colonies/{{colony.imgsil}}.jpg">
+        <img class="full-image" ng-src="img/colonies/{{colony.img}}_sil.jpg">
         <div class="padding">
-          <h1 class="text-left">Hint</h1>
-          <p>
-              {{colony.hint}}
-          </p>
+            <h1 class="text-left">Clue:</h1>
+            <p>
+                {{colony.hint}}
+            </p>
         </div>
     </div>
 </div>
