--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -1,14 +1,14 @@
 <ion-view>
 
-    <ion-header-bar align-title="center" class="bar-balanced">
-        <h1 class="title">Urban Colonization</h1>
+    <ion-header-bar align-title="center" class="sarah-green-header">
+        <h1 class="title white">Urban Colonization</h1>
     </ion-header-bar>
 
     <ion-content>
         <div class="list list-inset" style="text-align:center; margin:0;">
 
             <div class="item item-image" style="border:none; margin:15px; border-radius: 3px;">
-                <img src="img/homelichen.png"/>
+                <img src="img/Home_Page_Image.jpg"/>
             </div>
             
             <div class="item item-text-wrap" style="border:none; margin: 20px 0;">
@@ -16,13 +16,12 @@
             </div>
             
             <div class="row">
-                <button
-                        class="button button-large button-balanced button-block" ui-sref="signin">
+                <button class="button button-block button-balanced" ui-sref="signin">
                     Get Started
                 </button>
             </div>
             <div class="row">
-                <button class="button button-block" ui-sref="about">
+                <button class="button button-block sarah-green-1" ui-sref="about">
                     About This Project
                 </button>
             </div>
