--- a/www/pages/map.html
+++ b/www/pages/map.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-header-bar align-title="center" class="bar-balanced">
-          <button class="button button-clear icon-left ion-chevron-left"
+          <button class="button button-clear icon-left ion-ios-arrow-back"
                   ui-sref="locations" i>Back</button>
         <h1 class="title">Map</h1>
     </ion-header-bar>
