--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -1,7 +1,8 @@
 <ion-view>
 
     <ion-header-bar align-title="center" class="bar-balanced">
-        <button class="button button-clear icon ion-ios-home" ui-sref="home"></button>
+        <button class="button button-clear icon-left ion-ios-arrow-back"
+                ui-sref="home" i>Back</button>
         <h1 class="title">About</h1>
     </ion-header-bar>
 
@@ -18,8 +19,8 @@
             <div class="item item-divider text-center">
                 <strong>Biography</strong>
             </div>
-            <div class="item item-text-wrap">
-                Sarah Hearn is an interdisciplinary visual artist and citizen scientist. Her artwork, rooted in drawing, photography, installation and participatory culture, explores the shifting boundaries of science and science fiction. Sarah has exhibited in galleries and art spaces across the United States and has contributed to international collaborations in Brooklyn, Berlin, and most recently Reading, UK for 2014 International Science Week. Her fictional catalog of marine life "An Unnatural History" represented the United States at the World Creativity Biennial. Sarah’s multi-year collaboration with a PhD lichenologist will soon result in the first field guide of its kind in Oklahoma. She earned her BFA at the Santa Fe College of Art & Design, and her MFA from Rochester Institute of Technology. Find out more about the artist at: <a href="http://sarahhearnart.com" target="_BLANK">sarahhearnart.com</a>, & visit her blog: <a href="http://sarahhearn.blogspot.com/" target="_BLANK">sarahhearn.blogspot.com</a>
+            <div class="item item-text-wrap anch-txt">
+                Sarah Hearn is an interdisciplinary visual artist and citizen scientist. Her artwork, rooted in drawing, photography, installation and participatory culture, explores the shifting boundaries of science and science fiction. Sarah has exhibited in galleries and art spaces across the United States and has contributed to international collaborations in Brooklyn, Berlin, and most recently Reading, UK for 2014 International Science Week. Her fictional catalog of marine life "An Unnatural History" represented the United States at the World Creativity Biennial. Sarah’s multi-year collaboration with a PhD lichenologist will soon result in the first field guide of its kind in Oklahoma. She earned her BFA at the Santa Fe College of Art & Design, and her MFA from Rochester Institute of Technology. Find out more about the artist at: <a class="balanced" href="http://sarahhearnart.com" target="_BLANK">sarahhearnart.com</a>, & visit her blog: <a class="balanced" href="http://sarahhearn.blogspot.com/" target="_BLANK">sarahhearn.blogspot.com</a>
             </div>
         </div>
         <div class="card">
