--- a/www/pages/colony.html
+++ b/www/pages/colony.html
@@ -1,8 +1,8 @@
 <ion-view>
     <ion-header-bar align-title="center" class="bar-balanced">
-          <button class="button button-clear icon-left ion-chevron-left"
+          <button class="button button-clear icon-left ion-ios-arrow-back"
                   ui-sref="location({lid: {{lid}}})">Back</button>
-        <h1 class="title">{{title}}</h1>
+        <h1 class="title">Colony {{colony.id}}</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home"></button>
     </ion-header-bar>
