debut 2/3. uploaded pictures. upgraded ionic.

--- a/www/pages/fragment/knownColony.html
+++ b/www/pages/fragment/knownColony.html
@@ -24,13 +24,13 @@
         </div>
         <div class="row">
             <span ng-class="{'col-offset-25': !name2}" class="col col-50 text-center">
-                <a target="_blank" href="{{url}}"
+                <a target="_blank" ng-href="{{url}}"
                    class="button button-block button-balanced" role="button">
                     Website
                 </a>
             </span>
             <span ng-if="name2" class="col col-50 text-center">
-                <a target="_blank" href="{{url2}}"
+                <a target="_blank" ng-href="{{url2}}"
                    class="button button-block button-balanced" role="button">
                     Website
                 </a>
